// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSearchRules 1`] = `[]`;

exports[`createSearchRules 2`] = `
[
  {
    "negative": true,
    "pattern": /\\(\\?:\\^\\|\\\\s\\)\\(c\\)\\(\\\\s\\|\\$\\)/,
    "scope": "tags",
  },
  {
    "negative": false,
    "pattern": /\\(\\?:\\^\\|\\\\s\\)\\(a\\|b\\)\\(\\\\s\\|\\$\\)/,
    "scope": "tags",
  },
  {
    "negative": false,
    "pattern": "hello",
    "scope": "",
  },
]
`;

exports[`createSearchRules 3`] = `
[
  {
    "negative": false,
    "pattern": /\\(\\?:\\^\\|\\\\s\\)\\(a-b\\|b\\)\\(\\\\s\\|\\$\\)/,
    "scope": "tags",
  },
  {
    "negative": false,
    "pattern": "hello",
    "scope": "name",
  },
  {
    "negative": false,
    "pattern": "world",
    "scope": "",
  },
]
`;

exports[`createSearchRules 4`] = `
[
  {
    "negative": false,
    "pattern": /\\(\\?:\\^\\|\\\\s\\)\\(a\\\\\\.b\\|b\\)\\(\\\\s\\|\\$\\)/,
    "scope": "tags",
  },
  {
    "negative": false,
    "pattern": "hello world",
    "scope": "name",
  },
]
`;

exports[`createSearchRules 5`] = `
[
  {
    "negative": false,
    "pattern": /\\(\\?:\\^\\|\\\\s\\)\\(a\\\\\\.b\\|b\\)\\(\\\\s\\|\\$\\)/,
    "scope": "tags",
  },
  {
    "negative": false,
    "pattern": /hello world/i,
    "scope": "name",
  },
]
`;

exports[`createSearchRules 6`] = `
[
  {
    "negative": false,
    "pattern": /\\(\\?:\\^\\|\\\\s\\)\\(a\\\\\\.b\\|b\\)\\(\\\\s\\|\\$\\)/,
    "scope": "tags",
  },
  {
    "negative": true,
    "pattern": /hello world/i,
    "scope": "name",
  },
]
`;

exports[`createSearchRules 7`] = `
[
  {
    "negative": false,
    "pattern": "#a.b",
    "scope": "",
  },
  {
    "negative": true,
    "pattern": "#b",
    "scope": "",
  },
]
`;

exports[`createSearchRules 8`] = `
[
  {
    "negative": false,
    "pattern": /regexp/i,
    "scope": "",
  },
  {
    "negative": false,
    "pattern": /regexp/u,
    "scope": "code",
  },
  {
    "negative": false,
    "pattern": "/not",
    "scope": "",
  },
  {
    "negative": false,
    "pattern": "regexp/",
    "scope": "",
  },
]
`;

exports[`createSearchRules 9`] = `
[
  {
    "negative": false,
    "pattern": "foobar",
    "scope": "",
  },
  {
    "negative": false,
    "pattern": /foobar/i,
    "scope": "",
  },
  {
    "negative": false,
    "pattern": /foobar/i,
    "scope": "name",
  },
  {
    "negative": false,
    "pattern": /foobar/i,
    "scope": "code",
  },
]
`;
